--- a/strimzi.yaml
+++ b/strimzi.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
   name: strimzi
-  namespace: strimzi
+  namespace: argocd
 spec:
   project: default
   source:
