--- a/helm/templates/kafka-single-node.yaml
+++ b/helm/templates/kafka-single-node.yaml
@@ -22,7 +22,7 @@ spec:
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: my-cluster
+  name: lv-cluster
   annotations:
     strimzi.io/node-pools: enabled
     strimzi.io/kraft: enabled
