--- a/helm/templates/strimzi-pod-monitor.yaml
+++ b/helm/templates/strimzi-pod-monitor.yaml
@@ -27,7 +27,7 @@ spec:
       app.kubernetes.io/name: entity-operator
   namespaceSelector:
     matchNames:
-      - myproject
+      - srimzi
   podMetricsEndpoints:
   - path: /metrics
     port: healthcheck
@@ -44,7 +44,7 @@ spec:
       strimzi.io/kind: KafkaBridge
   namespaceSelector:
     matchNames:
-      - myproject
+      - strimzi
   podMetricsEndpoints:
   - path: /metrics
     port: rest-api
@@ -63,7 +63,7 @@ spec:
         values: ["Kafka", "KafkaConnect", "KafkaMirrorMaker2"]
   namespaceSelector:
     matchNames:
-      - myproject
+      - strimzi
   podMetricsEndpoints:
   - path: /metrics
     port: tcp-prometheus
