--- a/helm/templates/strimzi-pod-monitor.yaml
+++ b/helm/templates/strimzi-pod-monitor.yaml
@@ -27,7 +27,7 @@ spec:
       app.kubernetes.io/name: entity-operator
   namespaceSelector:
     matchNames:
-      - srimzi
+      - strimzi
   podMetricsEndpoints:
   - path: /metrics
     port: healthcheck
