--- a/helm/templates/strimzi-pod-monitor.yaml
+++ b/helm/templates/strimzi-pod-monitor.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: prometheus
   labels:
     app: strimzi
+    serviceMonitorSelector: prometheus
 spec:
   selector:
     matchLabels:
@@ -23,6 +24,7 @@ metadata:
   namespace: prometheus
   labels:
     app: strimzi
+    serviceMonitorSelector: prometheus
 spec:
   selector:
     matchLabels:
@@ -41,6 +43,7 @@ metadata:
   namespace: prometheus
   labels:
     app: strimzi
+    serviceMonitorSelector: prometheus
 spec:
   selector:
     matchLabels:
@@ -59,6 +62,7 @@ metadata:
   namespace: prometheus
   labels:
     app: strimzi
+    serviceMonitorSelector: prometheus
 spec:
   selector:
     matchExpressions:
