--- a/helm/templates/kafka-bridge.yaml
+++ b/helm/templates/kafka-bridge.yaml
@@ -4,7 +4,7 @@ metadata:
   name: lv-bridge
 spec:
   replicas: 1
-  bootstrapServers: lv-cluster-kafka-bootstrap:9092
+  bootstrapServers: lv-cluster-kafka-bootstrap.strimzi.svc.cluster.local:9093
   http:
     port: 8080
   enableMetrics: true
