--- a/helm/templates/bridge-ingress-route.yaml
+++ b/helm/templates/bridge-ingress-route.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     # spec.ingressClassName: traefik # This was an incorrect placement for ingressClassName
     traefik.ingress.kubernetes.io/router.entrypoints: web
-    traefik.ingress.kubernetes.io/router.middlewares: opensearch-stripprefix-otel@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: bridge-stripprefix-otel@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
