fix middleware name

--- a/helm/templates/bridge-ingress-route.yaml
+++ b/helm/templates/bridge-ingress-route.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     # spec.ingressClassName: traefik # This was an incorrect placement for ingressClassName
     traefik.ingress.kubernetes.io/router.entrypoints: web
-    traefik.ingress.kubernetes.io/router.middlewares: stripprefix-bridge@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: strimzi-stripprefix-bridge@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
