test with zipkin

--- a/helm/templates/kafka-bridge.yaml
+++ b/helm/templates/kafka-bridge.yaml
@@ -15,10 +15,9 @@ spec:
           value: "opentelemetry"
         - name: OTEL_SERVICE_NAME
           value: lv-bridge-otel-service
+        - name: OTEL_EXPORTEROTEL_TRACES_EXPORTER
+          value: "zipkin"
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:4318"
-        - name: OTEL_EXPORTER_OTLP_INSECURE
-          value: "true"
-          
+          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:9411/api/v2/spans"
   tracing:
     type: opentelemetry
