--- a/helm/templates/kafka-bridge.yaml
+++ b/helm/templates/kafka-bridge.yaml
@@ -18,6 +18,6 @@ spec:
         - name: OTEL_EXPORTEROTEL_TRACES_EXPORTER
           value: "zipkin"
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:9411/api/v2/spans"
+          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:9411"
   tracing:
     type: opentelemetry
