go back to otlp

--- a/helm/templates/kafka-bridge.yaml
+++ b/helm/templates/kafka-bridge.yaml
@@ -14,10 +14,8 @@ spec:
         - name: STRIMZI_TRACING_SYSTEM
           value: "opentelemetry"
         - name: OTEL_SERVICE_NAME
-          value: lv-bridge-otel-service
-        - name: OTEL_EXPORTEROTEL_TRACES_EXPORTER
-          value: "zipkin"
+          value: otlp
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:9411"
+          value: "http://otel-opentelemetry-collector.opensearch.svc.cluster.local:4317"
   tracing:
     type: opentelemetry
